// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`separator component should render with 2px height and default border-bottom 1`] = `
.c0 {
  height: 2px;
  border-bottom: 2px solid #21224029;
}

<div
  className="c0"
  height={2}
/>
`;

exports[`separator component should render with default height and border-bottom 1`] = `
.c0 {
  height: 1px;
  border-bottom: 1px solid #21224029;
}

<div
  className="c0"
/>
`;
